@@ -34,6 +34,8 @@ Version 1.3.2
 5735							: crash with invalid patchfiles
 5753							: don't crawl excluded paths
 5758							: "copy to working copy" in repobrowser at HEAD
+5762							: regex log message crash
+5763							: crash in log dialog
 
 Version 1.3.1
 5434							: Apply a patch in non ANSI or non UTF8 encoding
