@@ -36,6 +36,9 @@ Version 1.3.2
 - BUG: The "copy to working copy" context menu in the repository browser
        was only shown if multiple files were selected or the
        repository browser wasn't at HEAD. (Stefan)
+- BUG: Crash in text editor and log dialog when the issuetracker regex
+       strings were applied to the log message. (Stefan)
+- BUG: Crash in log dialog while retreiving log messages. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
